--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".map.MapFragment">
 
-    <fragment
-        android:id="@+id/mapHolder"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/activity_main" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
