--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="primary">#6200EE</color>
     <color name="primaryDark">#3700B3</color>
     <color name="accent">#6200EE</color>
+    <color name="translucent">#40000000</color>
 
 </resources>
